# AoC2021

puz01/: README.md
puz01/src/: main.rs
puz02/: README.md
puz02/src/: main.rs
puz03/: README.md
puz03/src/: functions.rs  main.rs  tests.rs
puz04/: Cargo.toml  README.md
puz04/src/: functions.rs  main.rs  tests.rs  utils.rs
puz05/: Cargo.toml  README.md
puz05/src/: functions.rs  main.rs  tests.rs
puz06/: Cargo.toml  README.md
puz06/src/: functions.rs  main.rs  tests.rs
puz07/: Cargo.toml  README.md
puz07/src/: functions.rs  main.rs  tests.rs
puz08/: README.md
puz08/src/: functions.rs  main.rs  tests.rs
puz09/: Cargo.toml  README.md
puz09/src/: functions.rs  main.rs  tests.rs
puz10/: Cargo.toml
puz10/src/: functions.rs  main.rs  tests.rs
puz11/: Cargo.toml  README.md
puz11/src/: functions.rs  main.rs  tests.rs
puz12/: Cargo.toml  README.md  ç
puz12/src/: functions.rs  main.rs  tests.rs
puz13/: Cargo.toml  README.md
puz13/src/: functions.rs  main.rs  tests.rs
puz14/: Cargo.toml  README.md
puz14/src/: functions.rs  main.rs  tests.rs
puz15/: Cargo.toml
puz15/src/: functions.rs  main.rs  tests.rs
puz16/: Cargo.toml
puz16/src/: functions.rs  main.rs  tests.rs
puz17/: Cargo.toml
puz17/src/: functions.rs  tests.rs
puz18/: Cargo.toml
puz18/src/: binary.rs  functions.rs  main.rs
puz20/src/: functions.rs
puz21/src/: functions.rs  main.rs
puz22/: Cargo.toml
puz22/src/: functions.rs  main.rs  tests.rs
puz24/: README.md
puz24/src/: functions.rs  main.rs
puz25/: Cargo.toml
puz25/src/: functions.rs  (+1 more)
