[package]
name = "puz17"
version = "0.1.0"
authors = ["Lorenzo <lorenzo.carbonell.cerezo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.41"
log = "0.4.14"
simple_logger = "1.15.0"
itertools = "0.10.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
